under construction is in center

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-<DOCUMENT! HTML>
+<!DocType html>
+<html>
+    <head>
+        <title>Sina's website</title>
+    </head>
 
-<head>
-    <title>Sina</title>
-</head>
-
-<body>
-    <div>
-        <h1> SINA !!! </h1>
-    </div>
-</body>
+    <body>
+        <div>
+            <h1 style="text-align:center"> SINA !!! </h1>
+            <h3 style="text-align:center"> This page is under construction</h3>
+        </div>
+    </body>
+</html>
